--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Sticky Footer Navbar Template for Bootstrap</title>
+    <title>Jen Hilton</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <body>
 
     <header>
-      <img src="/Users/jen/Desktop/rails_projects/portfolio/portfolio/assets/portfolio_header.png" alt="Jen Hilton - learning all about the things and stuff">
+      <img src="assets/portfolio_header.png" alt="Jen Hilton - learning all about the things and stuff">
       
     </header>
 
