--- a/index.html
+++ b/index.html
@@ -63,23 +63,29 @@
             <!-- WORK HISTORY - Card-Body -->
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <ul>
+                <p>...it's really long</p>
+                <p>...should I include my time @ pizza hut?</p>
+                <p...>seriously - there's been a LOT of career changes!</p>
+                <p>...some epiphanies, countless "Who Am I???" moments</p>
+                <p>I even studied PT at one point. Ha! (coz pancakes)</p>
+                </ul>
               </div>
             </div>
           </div>
 
           <div class="card">
 
-            <!-- SKILLS (copied from WORK HISTORY)- Card-Header -->
+            <!-- SKILLS - Card-Header -->
               <div class="card-header" id="headingThree">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    (SKILLS) Work History
+                    Skills
                   </button>
                 </h5>
               </div>
               
-              <!-- SKILLS (copied from WORK HISTORY) - Card-Body -->
+              <!-- SKILLS - Card-Body -->
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                 <div class="card-body">
                   <div class="container">
@@ -124,6 +130,7 @@
 
 
 <!-- FOOTER -->
+<p>
     <footer class="footer">
       <div class="container">
         <span class="text-muted">
